--- a/galaxy/firefox-esr/.artixlinux/pkgbase.yaml
+++ b/galaxy/firefox-esr/.artixlinux/pkgbase.yaml
@@ -1,107 +1,4 @@
 ---
-pkgbase:
-  name: firefox-esr
-  version: 128.10.0-1
-  arch:
-    - x86_64
-  pkgname:
-    - firefox-esr
-    - firefox-esr-i18n-ach
-    - firefox-esr-i18n-af
-    - firefox-esr-i18n-an
-    - firefox-esr-i18n-ar
-    - firefox-esr-i18n-ast
-    - firefox-esr-i18n-az
-    - firefox-esr-i18n-be
-    - firefox-esr-i18n-bg
-    - firefox-esr-i18n-bn
-    - firefox-esr-i18n-br
-    - firefox-esr-i18n-bs
-    - firefox-esr-i18n-ca-valencia
-    - firefox-esr-i18n-ca
-    - firefox-esr-i18n-cak
-    - firefox-esr-i18n-cs
-    - firefox-esr-i18n-cy
-    - firefox-esr-i18n-da
-    - firefox-esr-i18n-de
-    - firefox-esr-i18n-dsb
-    - firefox-esr-i18n-el
-    - firefox-esr-i18n-en-ca
-    - firefox-esr-i18n-en-gb
-    - firefox-esr-i18n-en-us
-    - firefox-esr-i18n-eo
-    - firefox-esr-i18n-es-ar
-    - firefox-esr-i18n-es-cl
-    - firefox-esr-i18n-es-es
-    - firefox-esr-i18n-es-mx
-    - firefox-esr-i18n-et
-    - firefox-esr-i18n-eu
-    - firefox-esr-i18n-fa
-    - firefox-esr-i18n-ff
-    - firefox-esr-i18n-fi
-    - firefox-esr-i18n-fr
-    - firefox-esr-i18n-fy-nl
-    - firefox-esr-i18n-ga-ie
-    - firefox-esr-i18n-gd
-    - firefox-esr-i18n-gl
-    - firefox-esr-i18n-gn
-    - firefox-esr-i18n-gu-in
-    - firefox-esr-i18n-he
-    - firefox-esr-i18n-hi-in
-    - firefox-esr-i18n-hr
-    - firefox-esr-i18n-hsb
-    - firefox-esr-i18n-hu
-    - firefox-esr-i18n-hy-am
-    - firefox-esr-i18n-ia
-    - firefox-esr-i18n-id
-    - firefox-esr-i18n-is
-    - firefox-esr-i18n-it
-    - firefox-esr-i18n-ja
-    - firefox-esr-i18n-ka
-    - firefox-esr-i18n-kab
-    - firefox-esr-i18n-kk
-    - firefox-esr-i18n-km
-    - firefox-esr-i18n-kn
-    - firefox-esr-i18n-ko
-    - firefox-esr-i18n-lij
-    - firefox-esr-i18n-lt
-    - firefox-esr-i18n-lv
-    - firefox-esr-i18n-mk
-    - firefox-esr-i18n-mr
-    - firefox-esr-i18n-ms
-    - firefox-esr-i18n-my
-    - firefox-esr-i18n-nb-no
-    - firefox-esr-i18n-ne-np
-    - firefox-esr-i18n-nl
-    - firefox-esr-i18n-nn-no
-    - firefox-esr-i18n-oc
-    - firefox-esr-i18n-pa-in
-    - firefox-esr-i18n-pl
-    - firefox-esr-i18n-pt-br
-    - firefox-esr-i18n-pt-pt
-    - firefox-esr-i18n-rm
-    - firefox-esr-i18n-ro
-    - firefox-esr-i18n-ru
-    - firefox-esr-i18n-si
-    - firefox-esr-i18n-sk
-    - firefox-esr-i18n-sl
-    - firefox-esr-i18n-son
-    - firefox-esr-i18n-sq
-    - firefox-esr-i18n-sr
-    - firefox-esr-i18n-sv-se
-    - firefox-esr-i18n-ta
-    - firefox-esr-i18n-te
-    - firefox-esr-i18n-th
-    - firefox-esr-i18n-tl
-    - firefox-esr-i18n-tr
-    - firefox-esr-i18n-trs
-    - firefox-esr-i18n-uk
-    - firefox-esr-i18n-ur
-    - firefox-esr-i18n-uz
-    - firefox-esr-i18n-vi
-    - firefox-esr-i18n-xh
-    - firefox-esr-i18n-zh-cn
-    - firefox-esr-i18n-zh-tw
 actions:
   addRepo: galaxy
   removeRepo: null
@@ -114,134 +11,146 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 128.10.0-1
+    version: 128.10.1-1
     packages:
-      - firefox-esr-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-ach-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-af-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-an-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-ar-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-ast-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-az-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-be-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-bg-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-bn-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-br-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-bs-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-ca-valencia-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-ca-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-cak-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-cs-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-cy-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-da-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-de-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-dsb-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-el-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-en-ca-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-en-gb-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-en-us-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-eo-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-es-ar-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-es-cl-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-es-es-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-es-mx-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-et-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-eu-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-fa-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-ff-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-fi-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-fr-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-fy-nl-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-ga-ie-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-gd-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-gl-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-gn-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-gu-in-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-he-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-hi-in-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-hr-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-hsb-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-hu-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-hy-am-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-ia-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-id-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-is-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-it-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-ja-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-ka-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-kab-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-kk-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-km-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-kn-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-ko-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-lij-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-lt-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-lv-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-mk-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-mr-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-ms-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-my-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-nb-no-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-ne-np-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-nl-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-nn-no-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-oc-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-pa-in-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-pl-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-pt-br-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-pt-pt-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-rm-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-ro-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-ru-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-si-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-sk-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-sl-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-son-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-sq-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-sr-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-sv-se-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-ta-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-te-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-th-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-tl-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-tr-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-trs-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-uk-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-ur-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-uz-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-vi-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-xh-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-zh-cn-128.10.0-1-x86_64.pkg.tar.zst
-      - firefox-esr-i18n-zh-tw-128.10.0-1-x86_64.pkg.tar.zst
+      - firefox-esr-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-ach-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-af-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-an-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-ar-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-ast-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-az-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-be-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-bg-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-bn-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-br-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-bs-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-ca-valencia-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-ca-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-cak-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-cs-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-cy-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-da-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-de-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-dsb-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-el-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-en-ca-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-en-gb-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-en-us-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-eo-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-es-ar-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-es-cl-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-es-es-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-es-mx-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-et-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-eu-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-fa-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-ff-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-fi-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-fr-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-fy-nl-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-ga-ie-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-gd-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-gl-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-gn-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-gu-in-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-he-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-hi-in-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-hr-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-hsb-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-hu-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-hy-am-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-ia-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-id-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-is-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-it-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-ja-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-ka-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-kab-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-kk-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-km-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-kn-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-ko-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-lij-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-lt-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-lv-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-mk-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-mr-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-ms-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-my-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-nb-no-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-ne-np-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-nl-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-nn-no-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-oc-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-pa-in-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-pl-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-pt-br-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-pt-pt-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-rm-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-ro-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-ru-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-si-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-sk-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-sl-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-son-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-sq-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-sr-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-sv-se-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-ta-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-te-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-th-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-tl-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-tr-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-trs-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-uk-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-ur-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-uz-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-vi-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-xh-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-zh-cn-128.10.1-1-x86_64.pkg.tar.zst
+      - firefox-esr-i18n-zh-tw-128.10.1-1-x86_64.pkg.tar.zst
+    debug: []
 team: galaxy
