--- a/galaxy/dillo/.artixlinux/pkgbase.yaml
+++ b/galaxy/dillo/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: galaxy
-pkgbase:
-  name: dillo
-  version: 3.2.0-3
-  arch:
-    - x86_64
-  pkgname:
-    - dillo
 actions:
   addRepo: galaxy
   removeRepo: galaxy-gremlins
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 3.2.0-3
+    version: 3.2.0-4
     packages:
-      - dillo-3.2.0-3-x86_64.pkg.tar.zst
+      - dillo-3.2.0-4-x86_64.pkg.tar.zst
+    debug: []
