--- a/world/ruby-rake-compiler/.artixlinux/pkgbase.yaml
+++ b/world/ruby-rake-compiler/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: ruby-rake-compiler
-  version: 1.3.0-1
-  arch:
-    - any
-  pkgname:
-    - ruby-rake-compiler
 actions:
   addRepo: world
   removeRepo: null
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1.3.0-1
+    version: 1.3.1-1
     packages:
-      - ruby-rake-compiler-1.3.0-1-any.pkg.tar.zst
+      - ruby-rake-compiler-1.3.1-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
