--- a/world/hexer-hobu/PKGBUILD
+++ b/world/hexer-hobu/PKGBUILD
@@ -1,7 +1,8 @@
-# Maintainer: Sven-Hendrik Haase <svenstaro@gmail.com>
+# Maintainer: Cory Sanin <corysanin@artixlinux.org>
+# Contributor: Sven-Hendrik Haase <svenstaro@gmail.com>
 pkgname=hexer-hobu
 pkgver=1.4.0
-pkgrel=13
+pkgrel=14
 pkgdesc="LAS and OGR hexagonal density and boundary surface generation"
 arch=('x86_64')
 url="https://github.com/hobu/hexer"
@@ -17,13 +18,16 @@ prepare() {
   cd hexer-${pkgver}
 
   patch -Np1 < "${srcdir}/1c528390ec47588661c86e773dcef771787fc564.patch"
+  sed -e 's|CMAKE_MAJOR_VERSION GREATER 2|FALSE|' -i CMakeLists.txt # Fix build with cmake 4
 }
 
 build() {
   mkdir -p hexer-${pkgver}/build
   cd hexer-${pkgver}/build
 
-  cmake -DCMAKE_INSTALL_PREFIX=/usr ..
+  cmake .. \
+    -DCMAKE_INSTALL_PREFIX=/usr \
+    -DCMAKE_POLICY_VERSION_MINIMUM=3.5
   make
 }
 
