--- a/world/liblas/.artixlinux/pkgbase.yaml
+++ b/world/liblas/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: liblas
-  version: 1.8.1.r128+gded46373-13
-  arch:
-    - x86_64
-  pkgname:
-    - liblas
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1.8.1.r128+gded46373-13
+    version: 1.8.1.r128+gded46373-14
     packages:
-      - liblas-1.8.1.r128+gded46373-13-x86_64.pkg.tar.zst
+      - liblas-1.8.1.r128+gded46373-14-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
