--- a/world/openscenegraph/.artixlinux/pkgbase.yaml
+++ b/world/openscenegraph/.artixlinux/pkgbase.yaml
@@ -1,14 +1,7 @@
 ---
-pkgbase:
-  name: openscenegraph
-  version: 3.6.5-26
-  arch:
-    - x86_64
-  pkgname:
-    - openscenegraph
 actions:
   addRepo: world
-  removeRepo: world-gremlins
+  removeRepo: world-goblins
   triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 3.6.5-26
+    version: 3.6.5-27
     packages:
-      - openscenegraph-3.6.5-26-x86_64.pkg.tar.zst
+      - openscenegraph-3.6.5-27-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
